--- a/sass/curls.scss
+++ b/sass/curls.scss
@@ -27,4 +27,7 @@
 @import 'columns/index';
 
 /** UI Components */
-@import 'ui/index'
+@import 'ui/index';
+
+/** Spacing */
+@import 'spacing/index'
