--- a/sass/ui/nav/dropdown/_variables.scss
+++ b/sass/ui/nav/dropdown/_variables.scss
@@ -1,11 +1,11 @@
 $dropdown-name: 'dropdown' !default;
 $dropdown-class: unquote("#{unquote(".")}#{$dropdown-name}") !default;
-$dropdown-background: #fff !default;
-$dropdown-border-color: #dbdbdb !default;
+$dropdown-background: $white !default;
+$dropdown-border-color: $border !default;
 $dropdown-border-style: solid !default;
 $dropdown-border-width: 1px !default;
 $dropdown-border-radius: 2px;
-$dropdown-shadow: 0 4px 6px 0px rgba(0, 0, 0, 0.2);
+$dropdown-shadow: 0 4px 6px 0px $dark-border;
 $dropdown-padding-top: 0 !default;
 $dropdown-padding-right: $dropdown-padding-top * 2 !default;
 $dropdown-padding-bottom: $dropdown-padding-top !default;
@@ -14,8 +14,8 @@ $dropdown-text-align: left;
 $dropdown-width: auto !default;
 $dropdown-min-width: 100%;
 
-$dropdown-link-color: #222 !default;
-$dropdown-link-background: white !default;
+$dropdown-link-color: $darkest-grey !default;
+$dropdown-link-background: $white !default;
 $dropdown-link-border-color: transparent !default;
 $dropdown-link-border-style: none !default;
 $dropdown-link-border-width: 0 !default;
@@ -24,8 +24,8 @@ $dropdown-link-padding-right: $dropdown-link-padding-top * 3 !default;
 $dropdown-link-padding-bottom: $dropdown-link-padding-top !default;
 $dropdown-link-padding-left: $dropdown-link-padding-right !default;
 
-$dropdown-link-hover-color: #666 !default;
-$dropdown-link-hover-background: #f7f7f7 !default;
+$dropdown-link-hover-color: $grey !default;
+$dropdown-link-hover-background: $lightest-grey !default;
 $dropdown-link-hover-border-color: transparent !default;
 $dropdown-link-hover-border-style: none !default;
 $dropdown-link-hover-border-width: 0 !default;
@@ -34,8 +34,8 @@ $dropdown-link-hover-padding-right: $dropdown-link-hover-padding-top * 3 !defaul
 $dropdown-link-hover-padding-bottom: $dropdown-link-hover-padding-top !default;
 $dropdown-link-hover-padding-left: $dropdown-link-hover-padding-right !default;
 
-$dropdown-link-active-color: #222 !default;
-$dropdown-link-active-background: darken($dropdown-link-hover-background, 10%) !default;
+$dropdown-link-active-color: $dark-grey !default;
+$dropdown-link-active-background: $light-grey !default;
 $dropdown-link-active-border-color: transparent !default;
 $dropdown-link-active-border-style: none !default;
 $dropdown-link-active-border-width: 0 !default;
@@ -45,8 +45,8 @@ $dropdown-link-active-padding-bottom: $dropdown-link-active-padding-top !default
 $dropdown-link-active-padding-left: $dropdown-link-active-padding-right !default;
 
 $dropdown-toggler-background: none !default;
-$dropdown-toggler-color: #666 !default;
-$dropdown-toggler-border-color: #dbdbdb !default;
+$dropdown-toggler-color: $grey !default;
+$dropdown-toggler-border-color: $border !default;
 $dropdown-toggler-border-style: solid !default;
 $dropdown-toggler-border-width: 1px !default;
 $dropdown-toggler-border-radius: 3px;
@@ -61,7 +61,7 @@ $dropdown-toggler-hover-border-radius: 3px;
 
 $dropdown-toggler-active-background: lighten($dropdown-toggler-color, 55%) !default;
 $dropdown-toggler-active-color: $dropdown-toggler-color !default;
-$dropdown-toggler-active-border-color: #dbdbdb !default;
+$dropdown-toggler-active-border-color: $border !default;
 $dropdown-toggler-active-border-style: solid !default;
 $dropdown-toggler-active-border-width: 1px !default;
 $dropdown-toggler-active-border-radius: 3px !default;
