--- a/sass/ui/nav/paginate/_variables.scss
+++ b/sass/ui/nav/paginate/_variables.scss
@@ -2,18 +2,18 @@ $paginate-name: 'paginate' !default;
 $paginate-class: unquote("#{unquote(".")}#{$paginate-name}") !default;
 $paginate-font-size: 18px !default;
 $paginate-line-height: 1.0em !default;
-$paginate-font-weight: 300;
+$paginate-font-weight: 400 !default;
 
 $paginate-link-color: $link-color !default;
 $paginate-link-hover-color: $link-hover-color !default;
 $paginate-link-class: unquote("#{unquote(".")}#{$paginate-name}__link") !default;
 $paginate-link-border-width: 1px !default;
 $paginate-link-border-style: solid !default;
-$paginate-link-border-color: #dbdbdb !default;
-$paginate-link-background: transparent !default;
-$paginate-link-border-radius: 5px !default;
-$paginate-link-padding: round($grid-gutter-l / 2) round($grid-gutter-l) !default;
+$paginate-link-border-color: rgba(0, 0, 0, 0.14) !default;
+$paginate-link-background: $white !default;
+$paginate-link-border-radius: 2px !default;
+$paginate-link-padding: round(map-get($grid-gutter, l) / 2) round(map-get($grid-gutter, l)) !default;
 $paginate-link-color: $link-color !default;
 $paginate-link-hover-color: $link-hover-color !default;
 $paginate-link-active-color: $link-active-color !default;
-$paginate-link-disabled-color: #bbb !default;
+$paginate-link-disabled-color: $light-grey !default;
