--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,12 +5,12 @@
 
 
 a, abbr, acronym, address, applet, b, big, blockquote, body, caption, center, cite, code, dd, del, dfn, div, dl, dt, em, fieldset, font, form, h1, h2, h3, h4, h5, h6, html, i, iframe, img, ins, kbd, label, legend, li, object, ol, p, pre, q, s, samp, small, span, strike, strong, sub, sup, table, tbody, td, tfoot, th, thead, tr, tt, u, ul, var {
-  background: 0 0;
+  background: none;
   border: 0;
   margin: 0;
   outline: 0;
   padding: 0;
-  vertical-align: baseline;
+  vertical-align: middle;
   word-wrap: break-word;
 }
 
@@ -21,6 +21,7 @@ a, abbr, acronym, address, applet, b, big, blockquote, body, caption, center, ci
 
 
 html, body {
+  -webkit-overflow-scrolling: touch;
   min-height: 100%;
   height: 100%;
 }
@@ -92,11 +93,4 @@ a {
 
 .noborder {
   border: 0 !important;
-}
-
-
-@each $x in (4px, 8px, 12px, 16px, 20px, 24px, 28px, 32px, 36px, 40px, 44px,
-             48px) {
-  @include margin-group($x);
-  @include padding-group($x);
 }
