--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -185,60 +185,18 @@ $retina-suffix: '@2x';
 }
 
 
-@mixin _group($size, $pre, $prop) {
-  $stripped-size: strip-units($size);
-  %#{$pre}--t#{$stripped-size} {
-    #{$prop}-top: $size !important;
-  }
-  .#{$pre}--t#{$stripped-size} {
-    @extend %#{$pre}--t#{$stripped-size};
-  }
-  %#{$pre}--b#{$stripped-size} {
-    #{$prop}-bottom: $size !important;
-  }
-  .#{$pre}--b#{$stripped-size} {
-    @extend %#{$pre}--b#{$stripped-size};
-  }
-  %#{$pre}--y#{$stripped-size} {
-    @extend %#{$pre}--t#{$stripped-size};
-    @extend %#{$pre}--b#{$stripped-size};
-  }
-  .#{$pre}--y#{$stripped-size} {
-    @extend %#{$pre}--y#{$stripped-size};
-  }
-  %#{$pre}--r#{$stripped-size} {
-    #{$prop}-right: $size !important;
-  }
-  .#{$pre}--r#{$stripped-size} {
-    @extend %#{$pre}--r#{$stripped-size};
-  }
-  %#{$pre}--l#{$stripped-size} {
-    #{$prop}-left: $size !important;
-  }
-  .#{$pre}--l#{$stripped-size} {
-    @extend %#{$pre}--l#{$stripped-size};
-  }
-  %#{$pre}--x#{$stripped-size} {
-    @extend %#{$pre}--r#{$stripped-size};
-    @extend %#{$pre}--l#{$stripped-size};
-  }
-  .#{$pre}--x#{$stripped-size} {
-    @extend %#{$pre}--x#{$stripped-size};
-  }
-  %#{$pre}--#{$stripped-size} {
-    #{$prop}: $size !important;
-  }
-  .#{$pre}--#{$stripped-size} {
-    @extend %#{$pre}--#{$stripped-size};
-  }
-}
+/// Replace `$search` with `$replace` in `$string`
+/// @author Hugo Giraudel
+/// @param {String} $string - Initial string
+/// @param {String} $search - Substring to replace
+/// @param {String} $replace ('') - New value
+/// @return {String} - Updated string
+@function str-replace($string, $search, $replace: '') {
+  $index: str-index($string, $search);
 
+  @if $index {
+    @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+  }
 
-@mixin margin-group($size, $prefix: 'm') {
-  @include _group($size, $prefix, 'margin')
-}
-
-
-@mixin padding-group($size, $prefix: 'p') {
-  @include _group($size, $prefix, 'padding')
+  @return $string;
 }
