--- a/sass/ui/card/_variables.scss
+++ b/sass/ui/card/_variables.scss
@@ -1,14 +1,14 @@
 $card-name: 'card' !default;
 $card-class: unquote("#{unquote(".")}#{$card-name}") !default;
-$card-background: #fff !default;
+$card-background: $white !default;
 $card-border-width: 1px !default;
 $card-border-style: solid !default;
-$card-border-color: #dbdbdb !default;
+$card-border-color: $border !default;
 $card-border-radius: 2px;
 
-$card-header-background: #f2f2f2 !default;
+$card-header-background: darken($lightest-grey, 1%) !default;
 $card-header-border-width: 1px 0 !default;
-$card-header-border-color: #dbdbdb !default;
+$card-header-border-color: $light-border !default;
 $card-header-border-style: solid !default;
 
 $card-footer-background: $card-header-background !default;
