--- a/sass/ui/nav/bar/_variables.scss
+++ b/sass/ui/nav/bar/_variables.scss
@@ -1,7 +1,7 @@
 $navbar-name: 'navbar' !default;
 $navbar-class: unquote("#{unquote(".")}#{$navbar-name}") !default;
-$navbar-background: #fff !default;
-$navbar-border-color: #dbdbdb !default;
+$navbar-background: $white !default;
+$navbar-border-color: $border !default;
 $navbar-border-style: solid !default;
 $navbar-border-width: 1px 0 !default;
 $navbar-padding: 0 0 !default;
