--- a/sass/grid/_variables.scss
+++ b/sass/grid/_variables.scss
@@ -40,6 +40,6 @@ $grid-breakpoint: (
   xs: $phone-s,
   s: $phone-max,
   m: $tablet-max,
-  l: $desktop,
+  l: $desktop-m,
   xl: $desktop-l,
 ) !default;
